@@ -2,6 +2,7 @@
 Release date: 
 * Enhancement: Dual Heading - Moved Spacing option to content tab and reorganised the style options
 * Enhancement: Pricing Table - Added responsive support for Tooltip position option
+* Fixed: Image Comparison - Handle was not working
 * Fixed: Unnecessary call to frontend.min.css file
 
 == 2.8.0 ==
